# ChangeLog for dev-perl/Sub-Uplevel
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Uplevel/ChangeLog,v 1.61 2009/08/16 09:22:08 tove Exp $

  16 Aug 2009; Torsten Veller <tove@gentoo.org> -files/uplevel.patch:
  Remove unused patch

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -Sub-Uplevel-0.16.ebuild,
  -Sub-Uplevel-0.19.01.ebuild:
  Cleanup

  11 Jun 2009; Raúl Porcel <armin76@gentoo.org> Sub-Uplevel-0.20.02.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #271956

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> Sub-Uplevel-0.20.02.ebuild:
  Stable for HPPA (bug #271956).

  07 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  Sub-Uplevel-0.20.02.ebuild:
  Stable on alpha, bug #271956

  31 May 2009; Markus Meier <maekke@gentoo.org> Sub-Uplevel-0.20.02.ebuild:
  amd64/x86 stable, bug #271956

  31 May 2009; Brent Baude <ranger@gentoo.org> Sub-Uplevel-0.20.02.ebuild:
  stable ppc64, bug 271956

  31 May 2009; nixnut <nixnut@gentoo.org> Sub-Uplevel-0.20.02.ebuild:
  ppc stable #271956

  18 Nov 2008; Torsten Veller <tove@gentoo.org> Sub-Uplevel-0.16.ebuild,
  Sub-Uplevel-0.19.01.ebuild, Sub-Uplevel-0.20.02.ebuild:
  New virtuals: module-build

*Sub-Uplevel-0.20.02 (12 Sep 2008)

  12 Sep 2008; Torsten Veller <tove@gentoo.org> -Sub-Uplevel-0.20.01.ebuild,
  +Sub-Uplevel-0.20.02.ebuild:
  Version bump. Cleanup

  10 Sep 2008; Torsten Veller <tove@gentoo.org> -Sub-Uplevel-0.13.ebuild,
  -Sub-Uplevel-0.14.ebuild:
  Cleanup

*Sub-Uplevel-0.20.01 (10 Sep 2008)

  10 Sep 2008; Torsten Veller <tove@gentoo.org> +Sub-Uplevel-0.20.01.ebuild:
  Version bump

  17 Jul 2008; Raúl Porcel <armin76@gentoo.org> Sub-Uplevel-0.19.01.ebuild:
  alpha/ia64/sparc/x86 stable

*Sub-Uplevel-0.19.01 (24 Apr 2008)

  24 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Sub-Uplevel-0.19.01.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Sub-Uplevel-0.16.ebuild:
  Stable for HPPA too.
