@@ -1,4 +1,6 @@
 DIST Sub-Uplevel-0.2002.tar.gz 18415 RMD160 5740912a7da219c609a62cd2613b271d7cd9cb84 SHA1 0584db2e4342c038c3cacc0d7e367aef64640fe1 SHA256 30979a384720e416b37cd8dae467b66bb6be3cda10da5ad9dc9b1eae7b5a62a5
+DIST Sub-Uplevel-0.22.tar.gz 23778 RMD160 42e375d9447da10a0db31d8afb9c99eb38670cf3 SHA1 c75150907d54fa51038fe70ee93993b45da96c8d SHA256 22923827855d864cbed12ce3e68da73c50edd8484b748154c0a26ba15d9e5cd6
 EBUILD Sub-Uplevel-0.20.02.ebuild 700 RMD160 8bc1f46de9ac207639e26840599b9458851b4c05 SHA1 d966473d5bfbc99dec2dc7318fe0274f7376e142 SHA256 605709ceec1dd801981468ef3e2c02967881678d01c72b2b0d955169ecbc8062
-MISC ChangeLog 7088 RMD160 7207bdf50da664192715997ce6ad7ff0672b3b87 SHA1 f484cbb9768a95b9f836d2a6ad7d85653ed6303e SHA256 63b6f985ccbd1d86eda7e787501527a70d88d2c9d0d7a50d9b05f036a45c1653
+EBUILD Sub-Uplevel-0.22.ebuild 697 RMD160 5fec4e8bce681e31dbf47b0cf7397648458fa8b9 SHA1 a8d72d232c74a5ef322ee4ea65fbe892a8a47270 SHA256 d58e9883b1fcae083658170ce0041ec84df2d4a1442b979d1328598e37ec065b
+MISC ChangeLog 7254 RMD160 83d27188e5644d6a0b23402f427bd2148c91ad8e SHA1 061092aca0aadc9ceaacfbc319e845f0b18bdf58 SHA256 4165d55f78dcd1e7778b1f3c5ae3051cb127c323e468f960fa4d8674962da31d
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
