@@ -1,0 +1,23 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Uplevel/Sub-Uplevel-0.22.ebuild,v 1.1 2009/11/22 11:22:06 robbat2 Exp $
+
+MODULE_AUTHOR=DAGOLDEN
+inherit perl-module versionator
+
+MY_P="${PN}-$(delete_version_separator 2)"
+S=${WORKDIR}/${MY_P}
+
+DESCRIPTION="apparently run a function in a higher stack frame"
+SRC_URI="mirror://cpan/authors/id/D/DA/DAGOLDEN/${MY_P}.tar.gz"
+
+LICENSE="|| ( Artistic GPL-2 )"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~m68k-mint ~sparc-solaris"
+IUSE=""
+
+SRC_TEST="do"
+
+RDEPEND="dev-lang/perl"
+DEPEND="${RDEPEND}
+	virtual/perl-Module-Build"
